Fixed layout problem for only Roadmap main menus.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -258,7 +258,8 @@
   z-index:      1;
   text-align:   center;
   background:   url(../images/page/separator_no_shadow.png) no-repeat bottom;
-  position: relative;
+  position:     relative;
+  height:       20px;
 }
 
 .submenu ul {
